--- a/Client/BirdEyes.Client.csproj
+++ b/Client/BirdEyes.Client.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.2" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="NicoVIII.GogApi" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
